--- a/config/storagedrawers.cfg
+++ b/config/storagedrawers.cfg
@@ -95,20 +95,34 @@ registries {
     S:compactingRules <
         minecraft:clay, minecraft:clay_ball, 4
 		actuallyadditions:block_misc:2, actuallyadditions:item_misc:5, 4
-        minecraft:iron_ore, contenttweaker:material_part:2, 4
-        minecraft:gold_ore, contenttweaker:material_part:0, 4
-        thermalfoundation:ore:4, contenttweaker:material_part:3, 4
-        bigreactors:oreyellorite, contenttweaker:material_part:6, 4
-        thermalfoundation:ore:2, contenttweaker:material_part:7, 4
-        thermalfoundation:ore:6, contenttweaker:material_part:8, 4
-        thermalfoundation:ore:1, contenttweaker:material_part:9, 4
-        thermalfoundation:ore:3, contenttweaker:material_part:10, 4
-        thermalfoundation:ore:5, contenttweaker:material_part:11, 4
-        thermalfoundation:ore:7, contenttweaker:material_part:12, 4
-        thermalfoundation:ore:0, contenttweaker:material_part:13, 4
-        mekanism:oreblock:0, contenttweaker:material_part:14, 4
-        tconstruct:ore:1, contenttweaker:material_part:1, 4
-        tconstruct:ore:0, contenttweaker:material_part:5, 4
+        # minecraft:iron_ore, contenttweaker:material_part:2, 4
+        # minecraft:gold_ore, contenttweaker:material_part:0, 4
+        # thermalfoundation:ore:4, contenttweaker:material_part:3, 4
+        # bigreactors:oreyellorite, contenttweaker:material_part:6, 4
+        # thermalfoundation:ore:2, contenttweaker:material_part:7, 4
+        # thermalfoundation:ore:6, contenttweaker:material_part:8, 4
+        # thermalfoundation:ore:1, contenttweaker:material_part:9, 4
+        # thermalfoundation:ore:3, contenttweaker:material_part:10, 4
+        # thermalfoundation:ore:5, contenttweaker:material_part:11, 4
+        # thermalfoundation:ore:7, contenttweaker:material_part:12, 4
+        # thermalfoundation:ore:0, contenttweaker:material_part:13, 4
+        # mekanism:oreblock:0, contenttweaker:material_part:14, 4
+        # tconstruct:ore:1, contenttweaker:material_part:1, 4
+        # tconstruct:ore:0, contenttweaker:material_part:5, 4
+        thermalfoundation:ore:1, contenttweaker:tin_piece, 4
+        thermalfoundation:ore:0, contenttweaker:copper_piece, 4
+        thermalfoundation:ore:2, contenttweaker:silver_piece, 4
+        thermalfoundation:ore:3, contenttweaker:lead_piece, 4
+        thermalfoundation:ore:4, contenttweaker:aluminium_piece, 4
+        thermalfoundation:ore:5, contenttweaker:nickel_piece, 4
+        thermalfoundation:ore:6, contenttweaker:platinum_piece, 4
+        thermalfoundation:ore:7, contenttweaker:iridium_piece, 4
+        minecraft:iron_ore, contenttweaker:iron_piece, 4
+        minecraft:gold_ore, contenttweaker:gold_piece, 4
+        mekanism:oreblock:0, contenttweaker:osmium_piece, 4
+        bigreactors:oreyellorite, contenttweaker:yellorium_piece, 4
+        tconstruct:ore:1, contenttweaker:ardite_piece, 4
+        tconstruct:ore:0, contenttweaker:cobalt_piece, 4
      >
 
     # List of ore dictionary names to blacklist for substitution. [default: ]
